--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,13 +1,24 @@
 .card img {
-    /* width: 350px; */
     height: 350px;
-    object-fit:contain;
-    margin-top: -10px;
+    object-fit: contain;
+    border-radius: 10px 10px 0 0;
+    z-index: 1;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 .card {
-    background-color: aqua;
+    background-color: #fff;
     display: inline-block;
-    padding: 5px;
-    border: 2px solid black;
+    margin: 15px;
+    border-radius: 10px 10px 25px 25px ;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.card a {
+    text-decoration: none;
+}
+
+.cardInformation {
+    
+    
 }
