--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -2,10 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: aliceblue;
+    background-color: #fff;
     padding: 5px;
-    margin-top: 5px;
-    border-radius: 15px;
-    border: 1px solid black;
-    height: max-content;
+    border-radius: 0 0 15px 15px;
+    height: 30px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
