arreglar searchbar, filtros y ordenamientos

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@ body {
   background-repeat: repeat;
   min-height: 100vh;
   font-family: Poppins, sans-serif; */
-  background-color: #fff;
+  background-color: #66bd6d;
   font-family: 'Inter', sans-serif;
 font-family: 'Rubik', sans-serif;
 font-family: 'Wix Madefor Display', sans-serif;
