--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -6,19 +6,32 @@
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
+p {
+    margin: 0;
+}
+
 .card {
     background-color: #fff;
     display: inline-block;
     margin: 15px;
     border-radius: 10px 10px 25px 25px ;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-}
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    }
 
 .card a {
     text-decoration: none;
 }
 
-.cardInformation {
-    
-    
+.weight {
+    display: inline-block;
+    margin: 10px;
+}
+
+.cardContainer {
+    display: flex;
+    justify-content: space-around;
+    padding-right: 5px;
+}
+
+.temperament {
+    color: #828282;
 }
